Refactor Vercel configuration to use rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,3 @@
 {
-  "functions": {
-    "api/index.py": {
-      "runtime": "vercel-python@latest"
-    }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.py"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/index" }]
 }
